# toydb

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
include/: query_builder.hpp  toydb.hpp
include/common/: assert.hpp  concepts.hpp  debug.hpp  errors.hpp  logging.hpp  result.hpp  stacktrace.hpp  types.hpp  util.hpp
include/engine/: database.hpp  join.hpp  memory.hpp  nested_loop_join.hpp  physical_operator.hpp  predicate_expr.hpp  predicate_result.hpp  relation.hpp  table.hpp
include/memory/: memory.hpp
include/parser/: lexer.hpp  parser.hpp  query_ast.hpp
include/planner/: interpreter.hpp  logical_operator.hpp  query_plan.hpp
include/storage/: arrow_table.hpp  catalog.hpp  csv_data_file_reader.hpp  data_file_reader.hpp  lockfile.hpp  table_handle.hpp
src/: repl.cpp  toydb.cpp
src/common/: assert.cpp  logging.cpp  types.cpp
src/parser/: lexer.cpp  parser.cpp  query_ast.cpp
src/planner/: interpreter.cpp
src/storage/: catalog.cpp  csv_data_file_reader.cpp  table_handle.cpp
test/: CMakeLists.txt  catalog_test.cpp  interpreter_test.cpp  lexer_test.cpp  nested_loop_join_test.cpp  parser_test.cpp  predicate_test.cpp  result_test.cpp  test_helpers.cpp  test_helpers.hpp  tests.cpp
test/data/: order_items.csv  orders.csv  products.csv  tdb_manifest.json  users.csv
